Still working on css @media, fix body width
Switching navbar container to flex column looks great, but the blank
right margin is still there. Apparently this is the scrollbar gutter.

If setting the body width to 100vw does not work, try this:
@media add to body 'overflow-y: hidden; overflow-x: auto;'

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+    width: 100vw;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     line-height: 1.4;
